# panelFull

./: CMakeLists.txt  README.md  README.txt  config.json  lines.json  schedule.json
core/: AppConfig.cpp  AppConfig.h  BackendController.cpp  BackendController.h  BatteryController.cpp  BatteryController.h  CMakeLists.txt  DeviceSnapshot.h  LineIoManager.cpp  LineIoManager.h  LocalIpcServer.cpp  LocalIpcServer.h  MaintenanceChecker.h  OpcUaServer.cpp  OpcUaServer.h  PasswordManager.h  TestController.cpp  TestController.h  TimeAjst.h  UsbSerialWatcher.h  ValueProvider.h  devicesnapshot_json.h  line.h  linesmodel.h  logger.cpp  logger.h  modbusbus.cpp  modbusbus.h  schedulecalculator.cpp  schedulecalculator.h  schedulemanager.cpp  schedulemanager.h  schedulestorage.cpp  schedulestorage.h  scheduletypes.h  systemObjects.h
core/modbus/: CMakeLists.txt  ModbusRegisterMap.cpp  ModbusRegisterMap.h  ModbusRtuSlave.cpp  ModbusRtuSlave.h  ModbusTcpServer.cpp  ModbusTcpServer.h
core/web/: WebApiServer.cpp  WebApiServer.h
hmi/: CMakeLists.txt  LineItem.qml  LogPage.qml  OperatorKeyboard.qml  PanelFacade.cpp  PanelFacade.h  README.txt  SchedulePage.qml  TestSettingsPage.qml  main.cpp  main.qml  pageAjaste.qml  pageAjasteSystem.qml  pageAjasteTime.qml  pageInfo.qml  pageLineEdit.qml  pagePass.qml  pagePassCh.qml  pageStart.qml  pageTest.qml  pageTestEx.qml
service/: CMakeLists.txt  main.cpp
web/: CMakeLists.txt
